syntax = "proto3";

package calculator;
option go_package = "/calculatorpb";

// sum
message SumRequest {
  int32 first_number = 1;
  int32 second_umber = 2;
}
message SumResponse {
  int32 sum_result = 1;
}

//factorial
message PrimeNumberDecompositionRequest {
  int64 number = 1;
}
message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

service CalculatorService {
  // Unary
  rpc Sum (SumRequest) returns (SumResponse) {};

  //server streaming
  rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){}
}